Fix Select2 alignment in selector modals.

--- a/oneflow/core/static/sass/_selector.scss
+++ b/oneflow/core/static/sass/_selector.scss
@@ -512,6 +512,10 @@
         margin-bottom: 0;
     }
 
+    .select2-container {
+        padding-top: 6px;
+    }
+
     label,
     input,
     select {
